--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,11 @@
 body {
-	background: linear-gradient(rgb(103,58,183), rgb(63,81,181));
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+	background:rgb(68, 84, 186) !important;
+  	margin: 0;
+  	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    	sans-serif;
+  	-webkit-font-smoothing: antialiased;
+  	-moz-osx-font-smoothing: grayscale;
 }
 
 html {
@@ -14,10 +14,6 @@ html {
 
 div {
 	margin:auto;
-}
-
-.navbar-brand {
-	font-size:3rem;
 }
 
 .heading { 
@@ -53,19 +49,19 @@ h1 {
 }
 
 table {
-  border-collapse: collapse;
-  width: 100%;
-  border:hidden;
+  	border-collapse: collapse;
+  	width: 100%;
+  	border:hidden;
 }
 
 tr, td, th {
-  border: none;
-  text-align: left;
-  padding: 8px;
+  	border: none;
+  	text-align: left;
+  	padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+	background-color: #dddddd;
 }
 
 td:nth-child(even) {
@@ -80,6 +76,10 @@ th:nth-child(even) {
 	position:absolute;
 	top:50%;
 	left:25%;
+}
+
+.button {
+	background:rgb(58, 75, 183)
 }
 
 .gradient {
@@ -121,6 +121,10 @@ th:nth-child(even) {
 	align-content:center;
 }
 
+.text-center {
+	text-align:center;
+}
+
 .text-right {
 	align-content:right;
 	text-align:right;
@@ -158,16 +162,17 @@ th:nth-child(even) {
 	background:rgb(255, 255, 255);
 }
 
-.white-background-image {
-	position:relative;
-	background-color:rgb(255,255,255);
-}
-
 .fat-center {
 	display:flex;
 	justify-content:center;
 	align-items:center;
-	width: 900px;
+	width: 750px;
+}
+.slim-center {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	width: 450px;
 }
 
 .spacer-logo {
@@ -289,7 +294,6 @@ th:nth-child(even) {
 .white-text {
 	color: white;
 }
-
 
 .paragraph {
 	display:flex;
